Updated some sections and layout

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,89 +1,57 @@
 <div id="about" class="h-32"></div>
 <section id="about" class="h-full grid grid-cols-12">
-  <div class="col-start-2 col-end-12 text-2xl text-[#949494]">
-    <p class="mb-2">
-      Benvenuto/a 👋🏼
-      <p class="mb-2">
-        Mi chiamo <span class="text-black">Simone Garofalo</span> e sono appassionato
-        di <span class="text-black">web design</span> e <span class="text-black"
-          >sviluppo web</span
-        >.
-      </p>
-      <p class="mb-4">
-        Ciò che è nato come un hobby, mi ha portato nel <span class="text-black"
-          >2024</span
-        > a lasciare il mio lavoro da dipendente per dedicarmi totalmente allo sviluppo
-        web e crescere in questo settore.
-      </p>
-      <p>
-        Sono sempre alla ricerca di <span class="text-black"
-          >nuove opportunità</span
-        > e collaborazioni, quindi non esitare a contattarmi!
-      </p>
-    </p>
-  </div>
-</section>
-<section class="h-full grid grid-cols-12">
   <div
     id="skills"
-    class="col-start-2 col-end-12 md:col-start-2 md:col-end-5 mt-40"
+    class="col-start-2 col-end-12 md:col-start-5 md:col-end-9 mt-4 md:mt-0"
   >
-    <h3 class="text-3xl mb-4">Skills</h3>
-    <div class="flex flex-wrap justify-start text-lg gap-x-3 gap-y-6">
+    <h3 class="text-2xl font-semibold text-center mb-4">Stack</h3>
+    <div class="flex flex-wrap justify-center text-lg gap-x-3 gap-y-6">
       <div>
-        <span class="py-1 px-2 border-2 border-black rounded-full">HTML</span>
+        <img src="/public/icon/html-icon.svg" alt="" class="w-14" />
       </div>
       <div>
-        <span class="py-1 px-2 border-2 border-black rounded-full">CSS</span>
+        <img src="/public/icon/css-icon.svg" alt="" class="w-14" />
       </div>
       <div>
-        <span class="py-1 px-2 border-2 border-black rounded-full"
-          >JavaScript</span
-        >
+        <img src="/public/icon/javascript-icon.svg" alt="" class="w-14" />
       </div>
       <div>
-        <span class="py-1 px-2 bg-[#EFEEEC] text-[#949494] rounded-full"
-          >PHP</span
-        >
+        <img src="/public/icon/node.js-icon.svg" alt="" class="w-14" />
       </div>
       <div>
-        <span class="py-1 px-2 bg-[#EFEEEC] text-[#949494] rounded-full"
-          >MySQL</span
-        >
+        <img src="/public/icon/express-icon.svg" alt="" class="w-14" />
       </div>
       <div>
-        <span class="py-1 px-2 border-2 border-black rounded-full">Astro</span
-        ><br />
+        <img src="/public/icon/mysql-icon.svg" alt="" class="w-14" />
       </div>
       <div>
-        <span class="py-1 px-2 border-2 border-black rounded-full"
-          >Tailwind</span
-        >
+        <img src="/public/icon/tailwind-icon.svg" alt="" class="w-14" />
       </div>
       <div>
-        <span class="py-1 px-2 bg-[#EFEEEC] text-[#949494] rounded-full"
-          >GSAP</span
-        >
+        <img src="/public/icon/astro-icon.svg" alt="" class="w-14" />
       </div>
       <div>
-        <span class="py-1 px-2 bg-[#EFEEEC] text-[#949494] rounded-full"
-          >Wordpress</span
-        >
+        <img src="/public/icon/git-icon.svg" alt="" class="w-14" />
       </div>
       <div>
-        <span class="py-1 px-2 bg-[#EFEEEC] text-[#949494] rounded-full"
-          >Figma</span
-        >
+        <img src="/public/icon/npm-icon.svg" alt="" class="w-14" />
       </div>
       <div>
-        <span class="py-1 px-2 border-2 border-black rounded-full">UX/UI</span>
+        <img src="/public/icon/wordpress-icon.svg" alt="" class="w-14" />
+      </div>
+      <div>
+        <img src="/public/icon/figma-icon.svg" alt="" class="w-14" />
       </div>
     </div>
   </div>
   <div
-    class="col-start-2 col-end-12 md:col-start-8 md:col-end-12 flex flex-col md:items-end mt-40"
+    class="col-start-2 col-end-12 md:col-start-5 md:col-end-9 flex flex-col items-center justify-center text-center mt-24 md:mt-40"
   >
-    <h3 class="text-3xl mb-4">Formazione</h3>
+    <h3 class="text-2xl font-semibold text-center mb-4">Certificazioni</h3>
+    <h4>Adobe Experience Manager Foundations</h4>
+    <p class="text-xs mb-3 italic text-[#949494]">Adobe - Giu 2025</p>
+    <h4>Introduction to Web Accessibility</h4>
+    <p class="text-xs mb-3 italic text-[#949494]">edX - Giu 2025</p>
     <h4>CSS for JavaScript Developers</h4>
     <p class="text-xs mb-3 italic text-[#949494]">
       CSS for JavaScript Developers by Josh W. Comeau - Mar 2025
