--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,27 +1,35 @@
-<section class="h-[560px] w-full grid grid-cols-12">
+<section class="h-[400px] md:h-[560px] w-full grid grid-cols-12">
   <div
-    class="col-span-12 flex flex-col gap-5 items-center justify-center translate-y-28"
+    class="col-span-12 md:col-start-4 md:col-end-10 flex flex-col gap-4 md:gap-8 items-center justify-center translate-y-32 md:translate-y-28"
   >
-    <h1 class="overflow-hidden text-lg md:text-4xl p-2 text-center">
-      Sono un <br /><span class="text dinamic-text-content"
-        >Web designer & Front-end developer</span
+    <h1 class="overflow-hidden text-2xl md:text-5xl text-center">
+      Sono un <br /><span class="text dinamic-text-content leading-relaxed"
+        >Web designer & Developer</span
       >
     </h1>
-    <a href="mailto:simonegarofalo.webdesign@gmail.com">
-      <div
-        class="text-blue-600 border-2 border-blue-600 rounded-full py-2 px-4 cursor-pointer hover:scale-105 transition duration-200"
-      >
-        Contattami
-      </div>
-    </a>
-    <a href="/Simone-Garofalo-CV.pdf" download>
-      <div
-        id="button-hero"
-        class="bg-blue-600 hover:bg-blue-800 transition duration-200 text-white rounded-full py-2 px-3 cursor-pointer hidden"
-      >
-        Download CV
-      </div>
-    </a>
+    <p
+      class="text-sm md:text-base text-center font-light px-4 md:px-16 md:-mt-4"
+    >
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dicta dolor
+      dolores perferendis magnam repellendus ipsum, vero neque! Quod officiis
+      harum nihil ea porro amet rerum iste voluptates sequi pariatur?
+    </p>
+    <div class="flex gap-4">
+      <a href="mailto:simonegarofalo.webdesign@gmail.com">
+        <div
+          class="bg-black text-white rounded-full shadow-xl shadow-gray-400 py-2 px-4 cursor-pointer hover:scale-105 transition duration-200"
+        >
+          Contattami
+        </div>
+      </a>
+      <a href="/Simone-Garofalo-CV.pdf" download>
+        <div
+          class="text-gray-600 hover:scale-105 transition duration-200 rounded-full py-2 px-4 cursor-pointer"
+        >
+          Download CV
+        </div>
+      </a>
+    </div>
   </div>
 </section>
 
