--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 
+import NavBanner from "../components/NavBanner.astro";
 import Navbar from "../components/Navbar.astro";
 import Hero from "../components/Hero.astro";
 import About from "../components/About.astro";
@@ -19,6 +20,7 @@ import Footer from "../components/Footer.astro";
     <title>Simone Garofalo | Web designer & Front-end developer</title>
   </head>
   <body>
+    <NavBanner />
     <Navbar />
     <Hero />
     <About />
