--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,6 +41,26 @@ body {
   }
 }
 
+/* Animazione notifica */
+.pulsing {
+  animation: pulse 1.25s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.6);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
 /* Animazione hero*/
 
 .text {
@@ -94,4 +114,8 @@ body {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
   color: #fff;
+}
+
+.opacity-0 {
+  opacity: 0;
 }
