Added 'alt' tags and updated some imgs

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -7,40 +7,44 @@
     <h3 class="text-2xl font-semibold text-center mb-4">Stack</h3>
     <div class="flex flex-wrap justify-center text-lg gap-x-3 gap-y-6">
       <div>
-        <img src="/public/icon/html-icon.svg" alt="" class="w-14" />
+        <img src="/icon/html-icon.svg" alt="html-icon" class="w-14" />
       </div>
       <div>
-        <img src="/public/icon/css-icon.svg" alt="" class="w-14" />
+        <img src="/icon/css-icon.svg" alt="css-icon" class="w-14" />
       </div>
       <div>
-        <img src="/public/icon/javascript-icon.svg" alt="" class="w-14" />
+        <img
+          src="/icon/javascript-icon.svg"
+          alt="javascript-icon"
+          class="w-14"
+        />
       </div>
       <div>
-        <img src="/public/icon/node.js-icon.svg" alt="" class="w-14" />
+        <img src="/icon/node.js-icon.svg" alt="node.js-icon" class="w-14" />
       </div>
       <div>
-        <img src="/public/icon/express-icon.svg" alt="" class="w-14" />
+        <img src="/icon/express-icon.svg" alt="express-icon" class="w-14" />
       </div>
       <div>
-        <img src="/public/icon/mysql-icon.svg" alt="" class="w-14" />
+        <img src="/icon/mysql-icon.svg" alt="mysql-icon" class="w-14" />
       </div>
       <div>
-        <img src="/public/icon/tailwind-icon.svg" alt="" class="w-14" />
+        <img src="/icon/tailwind-icon.svg" alt="tailwind-icon" class="w-14" />
       </div>
       <div>
-        <img src="/public/icon/astro-icon.svg" alt="" class="w-14" />
+        <img src="/icon/astro-icon.svg" alt="astro-icon" class="w-14" />
       </div>
       <div>
-        <img src="/public/icon/git-icon.svg" alt="" class="w-14" />
+        <img src="/icon/git-icon.svg" alt="git-icon" class="w-14" />
       </div>
       <div>
-        <img src="/public/icon/npm-icon.svg" alt="" class="w-14" />
+        <img src="/icon/npm-icon.svg" alt="npm-icon" class="w-14" />
       </div>
       <div>
-        <img src="/public/icon/wordpress-icon.svg" alt="" class="w-14" />
+        <img src="/icon/wordpress-icon.svg" alt="wordpress-icon" class="w-14" />
       </div>
       <div>
-        <img src="/public/icon/figma-icon.svg" alt="" class="w-14" />
+        <img src="/icon/figma-icon.svg" alt="figma-icon" class="w-14" />
       </div>
     </div>
   </div>
