--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
     <div class="flex justify-center items-center gap-8 mt-8">
       <a href="mailto:simonegarofalo.webdesign@gmail.com">
         <img
-          src="/public/email-icon.png"
+          src="/email-icon.png"
           alt="email-icon"
           class="w-[32px] hover:scale-105 transition duration-200"
         />
@@ -14,7 +14,7 @@
         rel="noopener noreferrer"
       >
         <img
-          src="/public/linkedin-icon.svg"
+          src="/linkedin-icon.svg"
           alt="linkedin-icon"
           class="w-[40px] hover:scale-105 transition duration-200"
         />
@@ -25,7 +25,7 @@
         rel="noopener noreferrer"
       >
         <img
-          src="/public/github-icon.svg"
+          src="/github-icon.svg"
           alt="github-icon"
           class="w-[40px] hover:scale-105 transition duration-200"
         />
