--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
   <div
     class="col-span-12 md:col-start-4 md:col-end-10 flex flex-col gap-4 md:gap-8 items-center justify-center translate-y-32 md:translate-y-28"
   >
-    <h1 class="overflow-hidden text-2xl md:text-5xl text-center">
+    <h1 class="overflow-hidden text-2xl md:text-5xl font-semibold text-center">
       Sono un <br /><span class="text dinamic-text-content leading-relaxed"
         >Web designer & Developer</span
       >
