Added other projects in portfolio

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -49,6 +49,15 @@ import Weather from "./Weather.astro";
       </a> -->
       </div>
     </a>
+    <div class="w-full h-[400px] rounded-3xl relative border shadow-lg">
+      <Todo />
+    </div>
+    <div class="w-full h-[300px] rounded-3xl relative border shadow-lg">
+      <Timer />
+    </div>
+    <div class="w-full h-[200px] rounded-3xl relative border shadow-lg">
+      <Weather />
+    </div>
     <div
       class="w-full h-[300px] flex justify-center items-center rounded-3xl border-4 border-[#EFEEEC] border-dotted relative"
     >
