--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -4,7 +4,7 @@
     id="skills"
     class="col-start-2 col-end-12 md:col-start-5 md:col-end-9 mt-4 md:mt-0"
   >
-    <h3 class="text-2xl font-semibold text-center mb-4">Stack</h3>
+    <h3 class="text-xl font-semibold text-center mb-4">Stack</h3>
     <div class="flex flex-wrap justify-center text-lg gap-x-3 gap-y-6">
       <div>
         <img src="/icon/html-icon.svg" alt="html-icon" class="w-14" />
@@ -51,7 +51,7 @@
   <div
     class="col-start-2 col-end-12 md:col-start-5 md:col-end-9 flex flex-col items-center justify-center text-center mt-24 md:mt-40"
   >
-    <h3 class="text-2xl font-semibold text-center mb-4">Certificazioni</h3>
+    <h3 class="text-xl font-semibold text-center mb-4">Certificazioni</h3>
     <h4>Adobe Experience Manager Foundations</h4>
     <p class="text-xs mb-3 italic text-[#949494]">Adobe - Giu 2025</p>
     <h4>Introduction to Web Accessibility</h4>
