Created contact form

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer id="contatti" class="h-full w-full grid grid-cols-12 mb-8">
+<footer id="contatti" class="h-full w-full grid grid-cols-12 mb-8 mt-16">
   <div class="col-start-2 col-end-12 md:col-start-5 md:col-end-9 text-center">
     <div class="flex justify-center items-center gap-8 mt-8">
       <a href="mailto:simonegarofalo.webdesign@gmail.com">
