--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,9 +10,9 @@
     <p
       class="text-sm md:text-base text-center font-light px-4 md:px-16 md:-mt-4"
     >
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dicta dolor
-      dolores perferendis magnam repellendus ipsum, vero neque! Quod officiis
-      harum nihil ea porro amet rerum iste voluptates sequi pariatur?
+      Realizzo siti web, landing page e componenti front-end con l'obiettivo di
+      aiutare aziende e freelance a migliorare la propria presenza digitale e
+      far crescere il loro business.
     </p>
     <div class="flex gap-4">
       <a href="mailto:simonegarofalo.webdesign@gmail.com">
