--- a/src/components/NavBanner.astro
+++ b/src/components/NavBanner.astro
@@ -6,9 +6,11 @@
       class="flex justify-center items-center gap-2 md:gap-4 text-white text-xs md:text-base"
     >
       <p>Il tuo sito web è ottimizzato?</p>
-      <button
-        class="w-24 md:w-32 h-5 md:h-6 rounded-full bg-white text-black text-xs md:text-sm"
-        >Verifica gratis</button
+      <a href="#form">
+        <button
+          class="w-24 md:w-32 h-5 md:h-6 rounded-full bg-white text-black text-xs md:text-sm"
+          >Verifica gratis</button
+        ></a
       >
     </div>
     <img
