--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -28,7 +28,7 @@
       </li>
       <li>
         <a
-          href="#contatti"
+          href="#form"
           class="hover:text-black transition duration-200 cursor-pointer ml-10"
           >Contatti</a
         >
