--- a/src/components/Todo.astro
+++ b/src/components/Todo.astro
@@ -7,7 +7,7 @@
         type="text"
         id="input-box"
         placeholder="Aggiungi qui le cose da fare"
-        class="text-[0.55rem] md:text-sm flex-1 border-none outline-none bg-transparent"
+        class="text-xs md:text-sm flex-1 border-none outline-none bg-transparent"
       />
       <button
         id="add-button"
