--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Navbar from "../components/Navbar.astro";
 import Hero from "../components/Hero.astro";
 import About from "../components/About.astro";
 import Projects from "../components/Projects.astro";
+import Form from "../components/Form.astro";
 import Footer from "../components/Footer.astro";
 ---
 
@@ -25,6 +26,7 @@ import Footer from "../components/Footer.astro";
     <Hero />
     <About />
     <Projects />
+    <Form />
     <Footer />
   </body>
 </html>
