Updated weather icons

--- a/src/components/Timer.astro
+++ b/src/components/Timer.astro
@@ -18,8 +18,8 @@
         height="24px"
         viewBox="0 -960 960 960"
         width="24px"
-        fill="#000000"
-        class="hover:fill-blue-600"
+        fill="gray"
+        class="hover:fill-black"
       >
         <path d="M200-440v-80h560v80H200Z"></path>
       </svg>
@@ -41,8 +41,8 @@
         height="24px"
         viewBox="0 -960 960 960"
         width="24px"
-        fill="#000000"
-        class="hover:fill-blue-600"
+        fill="gray"
+        class="hover:fill-black"
       >
         <path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"
         ></path>
