--- a/src/components/Todo.astro
+++ b/src/components/Todo.astro
@@ -1,17 +1,20 @@
-<div class="h-[90%] md:h-[300px] p-5 m-5 bg-white rounded-3xl">
+<div class="h-[90%] md:h-[300px] p-5 bg-white rounded-3xl">
   <div class="w-full">
-    <span id="current-date" class="text-2xl md:text-4xl capitalize">A</span>
+    <div class="flex items-center gap-2">
+      <img src="/calendar.svg" alt="calendar-icon" class="w-8" />
+      <span id="current-date" class="text-2xl md:text-4xl capitalize">A</span>
+    </div>
     <h3 class="mb-5">Quali sono i tuoi impegni di oggi?</h3>
     <div class="flex justify-between">
       <input
         type="text"
         id="input-box"
         placeholder="Aggiungi qui le cose da fare"
-        class="text-xs md:text-sm flex-1 border-none outline-none bg-transparent"
+        class="text-sm flex-1 border-none outline-none bg-transparent"
       />
       <button
         id="add-button"
-        class="bg-red-500 text-white h-6 w-6 md:h-8 md:w-8 rounded-full"
+        class="bg-black text-white h-6 w-6 md:h-8 md:w-8 rounded-full"
       >
         +
       </button>
