Fixed img and color contrast check

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,7 +3,7 @@
     id="navbar"
     class="col-span-12 md:col-start-5 md:col-end-9 flex items-center justify-center rounded-full p-4 bg-white shadow-lg bg-opacity-10 backdrop-blur-lg border"
   >
-    <ul class="flex justify-between items-center text-gray-400">
+    <ul class="flex justify-between items-center text-[#767676]">
       <li>
         <a
           href="#about"
