--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -11,7 +11,7 @@ import Weather from "./Weather.astro";
     class="col-span-12 md:col-start-5 md:col-end-9 px-4 flex flex-col justify-center items-center gap-10 relative"
   >
     <div
-      class="w-full h-[300px] bg-[url(/studio-yoga-new.png)] bg-cover bg-center rounded-3xl border shadow-lg relative hover:scale-105 transition duration-200"
+      class="w-full h-[300px] bg-[url(/studio-yoga-new.webp)] bg-cover bg-center rounded-3xl border shadow-lg relative hover:scale-105 transition duration-200"
     >
       <div
         class="absolute bottom-[1rem] left-[1rem] rounded-full border flex
@@ -32,7 +32,7 @@ items-center justify-between px-2 gap-2"
           <img src="/website-icon.svg" alt="github-icon" class="w-[24px]" /></a
         >
       </div>
-      <div class="absolute top-[1rem] right-[1rem]">
+      <div class="absolute top-[0.5rem] right-[0.5rem]">
         <div
           class="relative h-3 w-3 rounded-full flex justify-center items-center bg-[#f13221] mr-2"
         >
@@ -41,10 +41,10 @@ items-center justify-between px-2 gap-2"
       </div>
     </div>
     <div
-      class="w-full h-[500px] bg-[url(/gelateria-milano.png)] bg-cover bg-center rounded-3xl border shadow-lg relative hover:scale-105 transition duration-200"
+      class="w-full h-[500px] bg-[url(/gelateria-milano.webp)] bg-cover bg-center rounded-3xl border shadow-lg relative hover:scale-105 transition duration-200"
     >
       <div
-        class="absolute bottom-[1rem] left-[1rem] rounded-full border flex
+        class="absolute bottom-[0.5rem] left-[0.5rem] rounded-full border flex
     items-center justify-between px-2 gap-2"
       >
         <a
@@ -75,7 +75,7 @@ items-center justify-between px-2 gap-2"
     <div
       class="w-full h-[300px] flex justify-center items-center rounded-3xl border-4 border-[#EFEEEC] border-dotted relative"
     >
-      <h3 class="text-[#949494]">Coming soon..</h3>
+      <h3 class="text-[#767676]">Coming soon..</h3>
     </div>
   </div>
 </section>
