--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Footer from "../components/Footer.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <link rel="stylesheet" href="/src/styles/global.css" />
-    <title>Simone Garofalo | Web designer & Front-end developer</title>
+    <title>Simone Garofalo | Web designer & Developer</title>
   </head>
   <body>
     <NavBanner />
