--- a/src/components/Timer.astro
+++ b/src/components/Timer.astro
@@ -18,7 +18,7 @@
         height="24px"
         viewBox="0 -960 960 960"
         width="24px"
-        fill="gray"
+        fill="#767676"
         class="hover:fill-black"
       >
         <path d="M200-440v-80h560v80H200Z"></path>
@@ -41,7 +41,7 @@
         height="24px"
         viewBox="0 -960 960 960"
         width="24px"
-        fill="gray"
+        fill="#767676"
         class="hover:fill-black"
       >
         <path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"
@@ -51,7 +51,7 @@
   </div>
   <button
     id="resetButton"
-    class="h-10 w-24 text-base bg-transparent border-none cursor-pointer transition-all duration-300 ease-in-out m-0 text-gray-400 hover:text-gray-700"
+    class="h-10 w-24 text-base bg-transparent border-none cursor-pointer transition-all duration-300 ease-in-out m-0 text-[#767676] hover:text-gray-700"
     onclick="reset()">Reset</button
   >
 </div>
