Fixed menu and color contrast

--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -3,7 +3,7 @@
   <div class="col-span-12 px-4 md:col-start-5 md:col-end-9">
     <h3 class="text-xl font-semibold text-center mb-4">
       Il tuo sito web è ottimizzato?<br /> Richiedi un'analisi <span
-        class="font-bold text-green-500">gratuita</span
+        class="font-bold text-[#228B22]">gratuita</span
       > ora <span class="opacity-0 md:opacity-100">👇🏼</span>
     </h3>
     <form
