--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,43 +3,28 @@
     id="navbar"
     class="col-span-12 md:col-start-5 md:col-end-9 flex items-center justify-center rounded-full p-4 bg-white shadow-lg bg-opacity-10 backdrop-blur-lg border"
   >
-    <ul class="flex justify-between items-center text-[#767676]">
-      <li>
-        <a
-          href="#about"
-          class="hover:text-black transition duration-200 cursor-pointer mr-10"
-          >About</a
-        >
-      </li>
+    <div class="flex justify-between items-center text-[#767676]">
+      <a
+        href="#about"
+        class="hover:text-black transition duration-200 cursor-pointer mr-10"
+        >About</a
+      >
       <div
         class="relative h-2 w-2 rounded-full flex justify-center items-center bg-[#f13221] mr-2"
       >
         <div class="pulsing absolute h-3 w-3 rounded-full bg-[#f13221]"></div>
       </div>
-      <li>
-        <a
-          href="#progetti"
-          class="hover:text-black transition duration-200 cursor-pointer"
-          >Progetti</a
-        >
-      </li>
-      <li>
-        <a
-          href="#form"
-          class="hover:text-black transition duration-200 cursor-pointer ml-10"
-          >Contatti</a
-        >
-      </li>
-      <!--       <li id="button" class="ml-10 hidden">
-        <a href="/Simone-Garofalo-CV.pdf" download>
-          <div
-            class="bg-blue-600 hover:bg-blue-800 transition duration-200 text-white rounded-full py-2 px-4 cursor-pointer"
-          >
-            Download CV
-          </div>
-        </a>
-      </li> -->
-    </ul>
+      <a
+        href="#progetti"
+        class="hover:text-black transition duration-200 cursor-pointer"
+        >Progetti</a
+      >
+      <a
+        href="#form"
+        class="hover:text-black transition duration-200 cursor-pointer ml-10"
+        >Contatti</a
+      >
+    </div>
   </nav>
 </header>
 
