--- a/src/components/Todo.astro
+++ b/src/components/Todo.astro
@@ -2,7 +2,7 @@
   <div class="w-full">
     <div class="flex items-center gap-2">
       <img src="/calendar.svg" alt="calendar-icon" class="w-8" />
-      <span id="current-date" class="text-2xl md:text-4xl capitalize">A</span>
+      <span id="current-date" class="text-2xl md:text-3xl capitalize">A</span>
     </div>
     <h3 class="mb-5">Quali sono i tuoi impegni di oggi?</h3>
     <div class="flex justify-between">
@@ -10,7 +10,7 @@
         type="text"
         id="input-box"
         placeholder="Aggiungi qui le cose da fare"
-        class="text-sm flex-1 border-none outline-none bg-transparent"
+        class="text-xs md:text-sm flex-1 border-none outline-none bg-transparent"
       />
       <button
         id="add-button"
