Fixed h1 font size

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,8 @@
     <h1
       class="overflow-hidden text-[1.5rem] lg:text-[3rem] font-semibold text-center"
     >
-      Sono un <br /><span class="text dinamic-text-content leading-relaxed"
+      Sono un <br /><span
+        class="text-[1.5rem] lg:text-[3rem] text dinamic-text-content leading-normal"
         >Web designer & Developer</span
       >
     </h1>
