--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -119,3 +119,15 @@ body {
 .opacity-0 {
   opacity: 0;
 }
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 920px) {
+  h1 {
+    font-size: 3rem;
+  }
+}
