--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@
       class="overflow-hidden text-[1.5rem] lg:text-[3rem] font-semibold text-center"
     >
       Sono un <br /><span
-        class="text-[1.5rem] lg:text-[3rem] text dinamic-text-content leading-normal"
+        class="text-inherit text dinamic-text-content leading-normal"
         >Web designer & Developer</span
       >
     </h1>
