--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,4 @@
-<section class="h-[400px] md:h-[560px] w-full grid grid-cols-12">
+<div class="h-[400px] md:h-[560px] w-full grid grid-cols-12">
   <div
     class="col-span-12 xl:col-start-4 xl:col-end-10 flex flex-col gap-4 md:gap-8 items-center justify-center translate-y-32 md:translate-y-28"
   >
@@ -34,6 +34,6 @@
       </a>
     </div>
   </div>
-</section>
+</div>
 
 <script src="/src/scripts/animation-hero.js"></script>
