--- a/src/components/Weather.astro
+++ b/src/components/Weather.astro
@@ -1,5 +1,5 @@
 <div class="h-full rounded-3xl flex justify-center items-center gap-5">
-  <img id="weather-img" src="/sunny.png" alt="" class="w-24" />
+  <img id="weather-img" src="/sunny.svg" alt="" class="w-24" />
   <div class="flex flex-col items-center">
     <div class="flex justify-center items-center">
       <span id="city" class="text-xl">Milano</span>
