--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,9 +15,12 @@ import Footer from "../components/Footer.astro";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta
+      name="description"
+      content="Simone Garofalo | Web designer & Developer"
+    />
+    <link rel="icon" type="image/svg+xml" href="/undefined.svg" />
     <meta name="generator" content={Astro.generator} />
-    <link rel="stylesheet" href="/src/styles/global.css" />
     <title>Simone Garofalo | Web designer & Developer</title>
   </head>
   <body>
