Updated contact form settings

--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -7,13 +7,13 @@
       > ora <span class="opacity-0 md:opacity-100">👇🏼</span>
     </h3>
     <form
-      action="./success-page"
       method="POST"
       name="landing-page"
       data-netlify="true"
       id="contact-form"
       class="w-full md:max-w-[700px] flex flex-col"
     >
+      <input type="hidden" name="form-name" value="landing-page" />
       <span>La tua email</span>
       <label for="email">
         <input
