--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -10,10 +10,18 @@
       method="POST"
       name="landing-page"
       data-netlify="true"
+      netlify-honeypot="bot-field"
       id="contact-form"
       class="w-full md:max-w-[700px] flex flex-col"
     >
       <input type="hidden" name="form-name" value="landing-page" />
+      <p class="hidden">
+        <label
+          >Don’t fill this out if you're human: <input
+            name="bot-field"
+          /></label
+        >
+      </p>
       <span>La tua email</span>
       <label for="email">
         <input
@@ -46,7 +54,7 @@
         type="submit"
         value="Invia"
         id="submit"
-        class="bg-black text-white rounded-full py-2 px-4 cursor-pointer hover:scale-105 transition duration-200"
+        class="bg-black text-white rounded-2xl py-2 px-4 cursor-pointer hover:scale-105 transition duration-200"
       />
     </form>
   </div>
