--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -30,7 +30,7 @@
           type="email"
           placeholder="Inserisci qui la tua email"
           pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"
-          class="w-full p-3 my-2 pl-4 mb-4 rounded-3xl border border-black text-start"
+          class="w-full p-3 my-2 pl-4 mb-4 rounded-3xl border border-black text-start focus:outline-none focus:ring-1 focus:ring-black"
           required
         />
       </label>
@@ -47,14 +47,14 @@
           name="message"
           placeholder="Scrivi il tuo messaggio qui..."
           rows="5"
-          class="w-full rounded-2xl p-4"
+          class="w-full rounded-2xl p-4 focus:outline-none focus:ring-2 focus:ring-black"
           required></textarea>
       </label>
       <input
         type="submit"
         value="Invia"
         id="submit"
-        class="bg-black text-white rounded-2xl py-2 px-4 cursor-pointer hover:scale-105 transition duration-200"
+        class="bg-black text-white rounded-2xl py-2 px-4 cursor-pointer hover:scale-105 transition duration-200 focus:outline-none focus:ring-2 focus:ring-black"
       />
     </form>
   </div>
