--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -8,6 +8,7 @@
     </h3>
     <form
       method="POST"
+      action="/"
       name="portfolio"
       data-netlify="true"
       netlify-honeypot="bot-field"
