--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -66,7 +66,7 @@
     <p class="text-xs mb-3 italic text-[#767676]">
       Nuova Accademia delle Belle Arti di Milano (NABA) - Gen 2025
     </p>
-    <h4 class="">Web development bootcamp</h4>
+    <h4 class="">Full-Stack Development Bootcamp</h4>
     <p class="text-xs mb-3 italic text-[#767676]">Udemy - Set 2024</p>
   </div>
 </section>
