--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,14 +18,14 @@
       far crescere il loro business.
     </p>
     <div class="flex gap-4">
-      <a href="mailto:simonegarofalo.webdesign@gmail.com">
+      <a href="mailto:simonegarofalo96@gmail.com">
         <div
           class="bg-black text-white rounded-full shadow-xl shadow-gray-400 py-2 px-4 cursor-pointer hover:scale-105 transition duration-200"
         >
           Contattami
         </div>
       </a>
-      <a href="/Simone-Garofalo-CV.pdf" download>
+      <a href="/Simone-Garofalo.pdf" download>
         <div
           class="text-gray-600 hover:scale-105 transition duration-200 rounded-full py-2 px-4 cursor-pointer"
         >
