Updated email adress

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 <footer id="contatti" class="h-full w-full grid grid-cols-12 my-8">
   <div class="col-start-2 col-end-12 md:col-start-5 md:col-end-9 text-center">
     <div class="flex justify-center items-center gap-8 mt-8">
-      <a href="mailto:simonegarofalo.webdesign@gmail.com">
+      <a href="mailto:simonegarofalo96@gmail.com">
         <img
           src="/email-icon.png"
           alt="email-icon"
