--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,7 @@
   >
     <div class="flex justify-between items-center text-[#767676]">
       <a
-        href="#about"
+        href="/#about"
         class="hover:text-black transition duration-200 cursor-pointer mr-10"
         >About</a
       >
@@ -15,12 +15,12 @@
         <div class="pulsing absolute h-3 w-3 rounded-full bg-[#f13221]"></div>
       </div>
       <a
-        href="#progetti"
+        href="/#progetti"
         class="hover:text-black transition duration-200 cursor-pointer"
         >Progetti</a
       >
       <a
-        href="#form"
+        href="/#form"
         class="hover:text-black transition duration-200 cursor-pointer ml-10"
         >Contatti</a
       >
