--- a/src/components/Conferma.astro
+++ b/src/components/Conferma.astro
@@ -1,11 +1,15 @@
 <section class="h-full mt-28 md:my-24 w-full grid grid-cols-12">
   <div
-    class="col-start-2 col-end-12 lg:col-start-5 lg:col-end-9 flex flex-col gap-5 items-center justify-center translate-y-14 md:translate-y-28"
+    class="col-start-2 col-end-12 xl:col-start-5 xl:col-end-9 flex flex-col gap-5 items-center justify-center translate-y-14 md:translate-y-28"
   >
     <h1 class="text-[1.5rem] lg:text-[3rem] leading-tight text-center p-2">
-      La tua richiesta è stata inviata con seccesso!<br />
+      La tua richiesta è stata inviata con successo!<br />
     </h1>
     <p class="text-center">Riceverai a breve una mail con tutti i dettagli.</p>
-    <a href="/"><span class="text-[#218DF1]">Torna alla home</span></a>
+    <a href="/"
+      ><div class="rounded-full border px-4 py-2 bg-black">
+        <span class="text-white">Torna alla home</span>
+      </div></a
+    >
   </div>
 </section>
