Updated logo and other components

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,7 +2,7 @@
 <section id="about" class="h-full grid grid-cols-12">
   <div
     id="skills"
-    class="col-start-2 col-end-12 md:col-start-5 md:col-end-9 mt-4 md:mt-0"
+    class="col-start-2 col-end-12 md:col-start-4 md:col-end-10 lg:col-start-5 lg:col-end-9 mt-4 md:mt-0"
   >
     <h2 class="text-xl font-semibold text-center mb-4">Stack</h2>
     <div class="flex flex-wrap justify-center text-lg gap-x-3 gap-y-6">
