--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -1,6 +1,8 @@
 <div id="form" class="h-32"></div>
 <section class="grid grid-cols-12">
-  <div class="col-span-12 px-4 md:col-start-5 md:col-end-9">
+  <div
+    class="col-span-12 px-4 md:col-start-4 md:col-end-10 lg:col-start-5 lg:col-end-9"
+  >
     <h3 class="text-xl font-semibold text-center mb-4">
       Il tuo sito web è ottimizzato?<br /> Richiedi un'analisi <span
         class="font-bold text-[#228B22]">gratuita</span
@@ -24,9 +26,6 @@
         class="w-full p-4 mb-4 rounded-3xl border border-black text-start focus:outline-none focus:ring-1 focus:ring-black"
         required
       />
-      <p id="email-error" class="text-red-500 text-xs hidden">
-        Inserisci una mail valida
-      </p>
       <label for="message" class="mb-2">Il tuo messaggio</label>
       <textarea
         id="message"
