--- a/src/components/NavBanner.astro
+++ b/src/components/NavBanner.astro
@@ -8,7 +8,7 @@
       <p>Il tuo sito web è ottimizzato?</p>
       <a href="#form">
         <button
-          class="w-24 md:w-32 h-5 md:h-7 rounded-full bg-white text-black text-xs md:text-sm"
+          class="w-24 md:w-32 h-5 md:h-7 rounded-full bg-white text-black text-xs md:text-sm cursor-pointer hover:scale-105 transition duration-200"
           >Verifica gratis</button
         ></a
       >
