--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,7 +8,7 @@ import Weather from "./Weather.astro";
 
 <section class="grid grid-cols-12">
   <div
-    class="col-span-12 md:col-start-5 md:col-end-9 px-4 flex flex-col justify-center items-center gap-10 relative"
+    class="col-span-12 md:col-start-4 md:col-end-10 lg:col-start-5 lg:col-end-9 px-4 flex flex-col justify-center items-center gap-10 relative"
   >
     <div
       class="w-full h-[300px] bg-[url(/studio-yoga-new.webp)] bg-cover bg-center rounded-3xl border shadow-lg relative hover:scale-105 transition duration-200"
