--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import Footer from "../components/Footer.astro";
       name="description"
       content="Simone Garofalo | Web designer & Developer"
     />
-    <link rel="icon" type="image/svg+xml" href="/undefined.svg" />
+    <link rel="icon" type="image/svg+xml" href="/terminal.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>Simone Garofalo | Web designer & Developer</title>
   </head>
