--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,7 @@
 <header class="w-full grid grid-cols-12 fixed top-16 left-0 z-10 px-4 md:px-0">
   <nav
     id="navbar"
-    class="text-sm lg:text-base col-span-12 md:col-start-5 md:col-end-9 flex items-center justify-center rounded-full p-4 bg-white shadow-lg bg-opacity-10 backdrop-blur-lg border"
+    class="text-sm lg:text-base col-span-12 md:col-start-4 md:col-end-10 lg:col-start-5 lg:col-end-9 flex items-center justify-center rounded-full p-4 bg-white shadow-lg bg-opacity-10 backdrop-blur-lg border"
   >
     <div class="flex justify-between items-center text-[#767676]">
       <a
